Add SimpleHarness and SimpleHarnessResult